# KOs-System

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Readme.md  driver.cpp  driver.hpp  gdt.cpp  gdt.h  gdt.hpp  interrupts.cpp  interrupts.hpp  interruptstubs.s  kernel.cpp  keyboard.cpp  keyboard.hpp  linker.ld  mouse.cpp  mouse.hpp  port.cpp  port.hpp  types.h
kernel/: .gdbinit  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.cmake.md  cmake_install.cmake  linker.ld
kernel/application/: app.h  app.hpp  app_log.h  cat.c  cd.c  clear.c  clock_app.c  date.c  echo.c  echo.cpp  free.c  hardware_info_app.c  hello.c  hello.cpp  ifconfig.cpp  init.c  kcursers_demo.cpp  ls.c  ls.cpp  lscpu.c  lscpu.cpp  lshw.c  memtest.c  mkdir.c  mv.c  ncurses_demo.c  ncurses_demo.cpp  ping.c  process_monitor.cpp  process_monitor_app.c  pwd.c  reboot.c  shutdown.c  ss.c  sshd.c  top.c  top.cpp  tree.c
kernel/application/init/: service.hpp
kernel/arch/x86/boot/: grub-cmake.cfg  grub.cfg
kernel/arch/x86/memory/: gdt.cpp  gdt.hpp  gdt_constants.hpp
kernel/boot/: grub-cmake.cfg  grub.cfg
kernel/cmake/: CMakeLists.txt  Makefile  cmake_install.cmake
kernel/disk/: hello.txt
kernel/disk/etc/: SERVICES.CFG
kernel/disk/etc/init.d/: SERVICES.CFG
kernel/docs/: boot_stages.md  networking.md  user_management.md
kernel/include/: gdt.hpp
kernel/include/application/: app.hpp
kernel/include/common/: panic.hpp  types.hpp
kernel/include/console/: kcursers.hpp  kcursers_c.h  logger.hpp  logo.hpp  ncurses.hpp  shell.hpp  threaded_shell.hpp  tty.hpp
kernel/include/drivers/: ata.hpp  ata_constants.hpp  blockdevice.hpp  driver.hpp  driver_manager.hpp  keyboard.hpp  mouse.hpp  vga.hpp  vga_constants.hpp
kernel/include/drivers/ata/: ata.hpp
kernel/include/drivers/gpu/: vmsvga.hpp
kernel/include/drivers/keyboard/: keyboard.hpp  keyboard_constants.hpp  keyboard_driver.hpp  keyboard_handler.hpp
kernel/include/drivers/mouse/: mouse_constants.hpp  mouse_driver.hpp  mouse_event_handler.hpp  mouse_stats.hpp
kernel/include/drivers/ps2/: ps2.hpp
kernel/include/drivers/usb/: hid_keyboard.hpp  uhci.hpp  usb_core.hpp
kernel/include/drivers/vga/: vga.hpp  vga_constants.hpp
kernel/include/fs/: fat16.hpp  fat32.hpp  filesystem.hpp
kernel/include/graphics/: compositor.hpp  font8x16_basic.hpp  font8x8_basic.hpp  framebuffer.hpp  gpu_accel.hpp  render_backend.hpp  terminal.hpp
kernel/include/hardware/: interrupts.hpp  pci.hpp  port.hpp  rtc.hpp
kernel/include/input/: event_queue.hpp
kernel/include/kernel/: boot_options.hpp  boot_stage.hpp  drivers.hpp  fs.hpp  globals.hpp  init.hpp  input_debug.hpp  mouse_handlers.hpp  multiboot_kernel.hpp  services.hpp  shell.hpp
kernel/include/lib/: elfloader.hpp  libc.hpp  serial.hpp  socket.hpp  stddef.hpp  stdio.hpp  string.hpp  sysapi.hpp  syscalls.hpp  tokenize.hpp
kernel/include/lib/libc/: api.h  socket.h  stddef.h  stdint.h  stdio.h  string.h  tokenize.h
kernel/include/memory/: gdt.hpp  heap.hpp  memory.hpp  paging.hpp  pmm.hpp
kernel/include/net/: arp.hpp  arp_cache.hpp  dns.hpp  ethernet.hpp  icmp.hpp  interface.hpp  ipv4.hpp  ipv4_packet.hpp  nic.hpp  raw_icmp.hpp  rx_dispatch.hpp  udp.hpp
kernel/include/process/: message_queue.hpp  pipe.hpp  scheduler.hpp  scheduler_demo.hpp  sync.hpp  thread.h  thread_manager.hpp  timer.hpp
kernel/include/services/: banner_service.hpp  desktop_entry.hpp  filesystem_service.hpp  journal_service.hpp  message_queue.hpp  network_manager.hpp  ps_service.h  service.hpp  service_manager.hpp  time_service.hpp  user_service.hpp  window_manager.hpp
kernel/include/sys/: api.hpp
kernel/include/ui/: component.hpp  cursor.hpp  framework.hpp  input.hpp  login_screen.hpp  process_viewer.hpp  system_components.hpp  window_registry.hpp
kernel/iso-qemu/boot/grub/: grub.cfg
kernel/kernel/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
kernel/src/: gdt.cpp  kernel.cpp  kernel_boot_options.cpp  kernel_drivers.cpp  kernel_globals.cpp  kernel_init.cpp  kernel_main.cpp  kernel_mouse_handlers.cpp  kernel_multiboot.cpp  kernel_services.cpp  kernel_shell.cpp  loader.s
kernel/src/application/: ifconfig.cpp
kernel/src/console/: kcursers_c.cpp  keyboardShellHandler.hpp  log_to_journal.cpp  log_to_journal_c.cpp  logger.cpp  logo.cpp  ncurses.cpp  registry.cpp  shell.cpp  shellKeyboardHandler.cpp  threaded_shell.cpp  tty.cpp
kernel/src/drivers/: ata.cpp  driver.cpp  driver_manager.cpp  keyboard.cpp  mouse.cpp  vga.cpp
kernel/src/fs/: fat16.cpp  fat32.cpp  filesystem.cpp
kernel/src/graphics/: compositor.cpp  font8x16_basic.cpp  font8x8_basic.cpp  framebuffer.cpp  gpu_accel.cpp  render_backend.cpp  terminal.cpp
kernel/src/hardware/: interrupts.cpp  interruptstubs.s  pci.cpp  port.cpp  rtc.cpp
kernel/src/input/: event_queue.cpp
kernel/src/kernel/: kernel_boot_options.cpp  kernel_drivers.cpp  kernel_fs.cpp  kernel_globals.cpp  kernel_init.cpp  kernel_multiboot.cpp  kernel_services.cpp
kernel/src/lib/: compiler_rt.cpp  elfloader.cpp  libc.cpp  newdelete.cpp  newdelete_kernel.cpp  panic.cpp  serial.cpp  socket.cpp  stdio.cpp  string.cpp  sysapi.cpp  syscall_app_stubs.cpp  syscall_stubs.cpp  syscall_table_init.cpp  syscalls.cpp  tokenize.cpp
kernel/src/libc/: stdio.c  tokenize.c
kernel/src/memory/: gdt.cpp  heap.cpp  paging.cpp  pmm.cpp
kernel/src/net/: arp.cpp  arp_cache.cpp  dns.cpp  icmp.cpp  ipv4.cpp  ipv4_packet.cpp  nic.cpp  raw_icmp.cpp  raw_icmp_shim.cpp  rx_dispatch.cpp  udp.cpp
kernel/src/process/: context_switch.s  message_queue.cpp  pipe.cpp  scheduler.cpp  scheduler_demo.cpp  sync.cpp  thread.cpp  thread_manager.cpp  timer.cpp
kernel/src/services/: banner_service.cpp  desktop_entry.cpp  filesystem_service.cpp  fs_stubs.cpp  journal_service.cpp  message_queue.cpp  network_manager.cpp  ps_service.cpp  service_api_stub.cpp  service_manager.cpp  time_service.cpp  user_service.cpp  window_manager.cpp
kernel/src/ui/: cursor.cpp  framework.cpp  input.cpp  login_screen.cpp  process_monitor_demo.cpp  process_viewer.cpp  system_components.cpp  window_registry.cpp
(+73 files in other folders)
